# dama_server

./: .gitignore  AGENTS.md
dama_klient/: dama_klient.sln
dama_klient/dama_klient_app/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  app.manifest
dama_klient/dama_klient_app/Models/: GameStartInfo.cs  GameState.cs  GameStateInfo.cs  LegalMovesResult.cs  PlayerInfo.cs  ServerStatus.cs
dama_klient/dama_klient_app/Services/: AppServices.cs  ConsoleLogger.cs  GameClient.cs  IGameClient.cs
dama_klient/dama_klient_app/ViewModels/: BoardCellViewModel.cs  GameViewModel.cs  LobbyViewModel.cs  LoginViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
dama_klient/dama_klient_app/Views/: GameView.axaml  GameView.axaml.cs  LobbyView.axaml  LobbyView.axaml.cs  LoginView.axaml  LoginView.axaml.cs
dama_server/: CMakeLists.txt  PROTOCOL.md
dama_server/src/: handlers.cpp  handlers.hpp  main.cpp  models.hpp  protocol.cpp  protocol.hpp
dama_server/tests/: manual_udp.py
tmp_src/src_klient/dama_klient_app/: App.axaml.cs  MainWindow.axaml.cs  Program.cs
tmp_src/src_klient/dama_klient_app/Models/: GameEndInfo.cs  GameStateInfo.cs  LoginResult.cs  Move.cs  RoomInfo.cs
tmp_src/src_klient/dama_klient_app/Services/: AppServices.cs  DiscoveryClient.cs  GameClient.cs  IGameClient.cs  ILogger.cs
tmp_src/src_klient/dama_klient_app/ViewModels/: AsyncCommand.cs  BoardCellViewModel.cs  GameViewModel.cs  LobbyViewModel.cs  LoginViewModel.cs  RelayCommand.cs
tmp_src/src_server/: CMakeLists.txt  handlers.cpp  handlers.hpp  main.cpp  models.hpp
(+6 files in other folders)
